--- a/code/notebooks/gamma_table.ipynb
+++ b/code/notebooks/gamma_table.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "977418ae-b492-4dae-8826-c8522f2652dc",
    "metadata": {},
    "outputs": [],
@@ -24,71 +24,30 @@
     "from hypers import weight_hypers\n",
     "from hypers import alpha_hypers \n",
     "\n",
-    "from experiment import Params\n",
-    "from experiment import run_experiments\n",
     "from experiment import load_experiments\n",
-    "from experiment import draw_logs\n",
+    "\n",
     "from experiment import experiments_to_df\n",
     "\n",
-    "from analysis import draw_several\n",
     "from analysis import extract_needed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "dc8b9cd3-10d2-4b50-991c-66e68cdb6217",
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiments_10, df_10 = load_experiments('../results/experim_10.json')\n",
-    "experiments_11, df_11 = load_experiments('../results/experim_11.json')\n",
-    "experiments_12, df_12 = load_experiments('../results/experim_12.json')\n",
-    "experiments_13, df_13 = load_experiments('../results/experim_13.json')\n",
-    "experiments_14, df_14 = load_experiments('../results/experim_14.json')\n",
-    "experiments_15, df_15 = load_experiments('../results/experim_15.json')\n",
-    "experiments_16, df_16 = load_experiments('../results/experim_16.json')\n",
-    "experiments_17, df_17 = load_experiments('../results/experim_17.json')\n",
-    "experiments_18, df_18 = load_experiments('../results/experim_18.json')\n",
-    "experiments_19, df_19 = load_experiments('../results/experim_19.json')\n",
-    "experiments_20, df_20 = load_experiments('../results/experim_20.json')\n",
-    "experiments_21, df_21 = load_experiments('../results/experim_21.json')\n",
     "experiments_22, df_22 = load_experiments('../results/experim_22.json')\n",
-    "experiments_23, df_23 = load_experiments('../results/experim_23.json')\n",
-    "experiments_24, df_24 = load_experiments('../results/experim_24.json')\n",
+    "\n",
     "experiments_25, df_25 = load_experiments('../results/experim_25.json')\n",
-    "experiments_26, df_26 = load_experiments('../results/experim_26.json')\n",
-    "experiments_27, df_27 = load_experiments('../results/experim_27.json')\n",
-    "experiments_28, df_28 = load_experiments('../results/experim_28.json')\n",
-    "experiments_29, df_29 = load_experiments('../results/experim_29.json')\n",
-    "experiments_30, df_30 = load_experiments('../results/experim_30.json')\n",
-    "experiments_31, df_31 = load_experiments('../results/experim_31.json')\n",
-    "experiments_32, df_32 = load_experiments('../results/experim_32.json')\n",
-    "experiments_33, df_33 = load_experiments('../results/experim_33.json')\n",
-    "experiments_34, df_34 = load_experiments('../results/experim_34.json')\n",
-    "experiments_35, df_35 = load_experiments('../results/experim_35.json')\n",
-    "experiments_36, df_36 = load_experiments('../results/experim_36.json')\n",
-    "experiments_37, df_37 = load_experiments('../results/experim_37.json')\n",
-    "experiments_38, df_38 = load_experiments('../results/experim_38.json')\n",
-    "experiments_39, df_39 = load_experiments('../results/experim_39.json')\n",
-    "experiments_40, df_40 = load_experiments('../results/experim_40.json')\n",
-    "experiments_41, df_41 = load_experiments('../results/experim_41.json')\n",
-    "experiments_42, df_42 = load_experiments('../results/experim_42.json')\n",
-    "experiments_43, df_43 = load_experiments('../results/experim_43.json')\n",
-    "experiments_44, df_44 = load_experiments('../results/experim_44.json')\n",
-    "experiments_45, df_45 = load_experiments('../results/experim_45.json')\n",
-    "experiments_46, df_46 = load_experiments('../results/experim_46.json')\n",
-    "experiments_47, df_47 = load_experiments('../results/experim_47.json')\n",
-    "experiments_48, df_48 = load_experiments('../results/experim_48.json')\n",
-    "experiments_49, df_49 = load_experiments('../results/experim_49.json')\n",
-    "experiments_50, df_50 = load_experiments('../results/experim_50.json')\n",
-    "experiments_51, df_51 = load_experiments('../results/experim_51.json')\n",
-    "# experiments_52, df_52 = load_experiments('../results/experim_52.json')"
+    "\n",
+    "experiments_30, df_30 = load_experiments('../results/experim_30.json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "6fa42390-ccc3-45f0-8b3b-f51c09e611ad",
    "metadata": {},
    "outputs": [
@@ -316,7 +275,7 @@
        "5     1 / (x + 1)  109160.56   93672.44   92423.81   131765.1   118780.9  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "8c47eb59-9af6-4bd8-a977-ebeeabbb6b79",
    "metadata": {},
    "outputs": [
@@ -359,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "0d234879-de28-40f9-869f-e6264c38cc84",
    "metadata": {},
    "outputs": [],
@@ -369,24 +328,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "a0155fae-b152-4763-89c9-d085a4cfe035",
    "metadata": {},
    "outputs": [],
    "source": [
     "needed_1 = {\n",
-    "    # 'noise': [12, 14],\n",
-    "    # 'random_seed': [103],\n",
     "    'train_window': [10],\n",
-    "    # 'key_a': [\"default\"],\n",
-    "    'key_w': [\"diverge_05\", \"simple_101\", \"const\"]\n",
     "}\n",
     "vital = extract_needed(experiments, needed_1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "ac28388f-3d01-4310-ab76-aac8a62c6ff9",
    "metadata": {},
    "outputs": [
@@ -425,7 +380,20 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <th>10</th>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1 / ((x + 1) * (ln(x + 1))^2)</td>\n",
+       "      <td>decaying past</td>\n",
+       "      <td>1 / (x + 1)</td>\n",
+       "      <td>122513.26</td>\n",
+       "      <td>107298.24</td>\n",
+       "      <td>99225.34</td>\n",
+       "      <td>148746.25</td>\n",
+       "      <td>134783.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
        "      <td>1</td>\n",
        "      <td>10</td>\n",
        "      <td>1 / (x^1.01)</td>\n",
@@ -529,7 +497,7 @@
        "      <td>138224.93</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>11</th>\n",
        "      <td>1</td>\n",
        "      <td>10</td>\n",
        "      <td>1 / (x^0.5)</td>\n",
@@ -585,36 +553,38 @@
        "</div>"
       ],
       "text/plain": [
-       "   noise_var train_window weight_function        mixing_type alpha_function  \\\n",
-       "11         1           10    1 / (x^1.01)      decaying past    1 / (x + 1)   \n",
-       "3          1           10    1 / (x^1.01)  decaying past-0.1    1 / (x + 1)   \n",
-       "8          1           10    1 / (x^1.01)  decaying past-0.2    1 / (x + 1)   \n",
-       "6          1           10    1 / (x^1.01)  decaying past-0.5    1 / (x + 1)   \n",
-       "9          1           10           1 / c      decaying past    1 / (x + 1)   \n",
-       "7          1           10           1 / c  decaying past-0.1    1 / (x + 1)   \n",
-       "1          1           10           1 / c  decaying past-0.2    1 / (x + 1)   \n",
-       "0          1           10           1 / c  decaying past-0.5    1 / (x + 1)   \n",
-       "10         1           10     1 / (x^0.5)      decaying past    1 / (x + 1)   \n",
-       "2          1           10     1 / (x^0.5)  decaying past-0.1    1 / (x + 1)   \n",
-       "5          1           10     1 / (x^0.5)  decaying past-0.2    1 / (x + 1)   \n",
-       "4          1           10     1 / (x^0.5)  decaying past-0.5    1 / (x + 1)   \n",
+       "   noise_var train_window                weight_function        mixing_type  \\\n",
+       "10         1           10  1 / ((x + 1) * (ln(x + 1))^2)      decaying past   \n",
+       "12         1           10                   1 / (x^1.01)      decaying past   \n",
+       "3          1           10                   1 / (x^1.01)  decaying past-0.1   \n",
+       "8          1           10                   1 / (x^1.01)  decaying past-0.2   \n",
+       "6          1           10                   1 / (x^1.01)  decaying past-0.5   \n",
+       "9          1           10                          1 / c      decaying past   \n",
+       "7          1           10                          1 / c  decaying past-0.1   \n",
+       "1          1           10                          1 / c  decaying past-0.2   \n",
+       "0          1           10                          1 / c  decaying past-0.5   \n",
+       "11         1           10                    1 / (x^0.5)      decaying past   \n",
+       "2          1           10                    1 / (x^0.5)  decaying past-0.1   \n",
+       "5          1           10                    1 / (x^0.5)  decaying past-0.2   \n",
+       "4          1           10                    1 / (x^0.5)  decaying past-0.5   \n",
        "\n",
-       "         mean   random_0   random_1   random_2   random_3  \n",
-       "11  123066.72  107134.89  100184.69  148414.86  136532.43  \n",
-       "3   110839.45   96141.55   92622.33  134327.77  120266.16  \n",
-       "8   111215.36   96431.58   92949.05  134625.43   120855.4  \n",
-       "6   113349.02    98236.3   94511.07  136772.66  123876.05  \n",
-       "9   128114.78  111494.88  102224.75  154495.88  144243.61  \n",
-       "7   120146.80  103720.59   99041.25  142517.35  135308.03  \n",
-       "1   120655.39  104187.64   99309.86  143233.36  135890.71  \n",
-       "0   122703.88  106107.26  100283.63   146199.7  138224.93  \n",
-       "10  126191.99  109889.25  101789.98  151996.01  141092.71  \n",
-       "2   114707.74   98998.93   96210.92  136923.09  126698.04  \n",
-       "5   115353.63   99593.39   96595.65  137697.77  127527.73  \n",
-       "4   118068.83  102118.82   98095.79   141090.8   130969.9  "
+       "   alpha_function       mean   random_0   random_1   random_2   random_3  \n",
+       "10    1 / (x + 1)  122513.26  107298.24   99225.34  148746.25  134783.22  \n",
+       "12    1 / (x + 1)  123066.72  107134.89  100184.69  148414.86  136532.43  \n",
+       "3     1 / (x + 1)  110839.45   96141.55   92622.33  134327.77  120266.16  \n",
+       "8     1 / (x + 1)  111215.36   96431.58   92949.05  134625.43   120855.4  \n",
+       "6     1 / (x + 1)  113349.02    98236.3   94511.07  136772.66  123876.05  \n",
+       "9     1 / (x + 1)  128114.78  111494.88  102224.75  154495.88  144243.61  \n",
+       "7     1 / (x + 1)  120146.80  103720.59   99041.25  142517.35  135308.03  \n",
+       "1     1 / (x + 1)  120655.39  104187.64   99309.86  143233.36  135890.71  \n",
+       "0     1 / (x + 1)  122703.88  106107.26  100283.63   146199.7  138224.93  \n",
+       "11    1 / (x + 1)  126191.99  109889.25  101789.98  151996.01  141092.71  \n",
+       "2     1 / (x + 1)  114707.74   98998.93   96210.92  136923.09  126698.04  \n",
+       "5     1 / (x + 1)  115353.63   99593.39   96595.65  137697.77  127527.73  \n",
+       "4     1 / (x + 1)  118068.83  102118.82   98095.79   141090.8   130969.9  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
