--- a/paper/KuninBogoiavlenskii2024ExpertsAggregating.tex
+++ b/paper/KuninBogoiavlenskii2024ExpertsAggregating.tex
@@ -18,7 +18,7 @@
 \usepackage{lipsum}% for dummy text
 %\usepackage[showframe]{geometry}
 
-\graphicspath{{../figures/}{../code/notebooks/pic}}
+\graphicspath{{../figures/}}
 \raggedbottom
 \usepackage{float}
 
@@ -91,9 +91,9 @@
     {
 
     Aggregating forecasts from multiple experts is a valuable method to improve prediction accuracy.
-    This paper examines the influence of hyperparameters on the accuracy of the aggregation algorithm for a countable number of experts.
+    This paper examines the influence of hyperparameters on the performance of the aggregation algorithm for a countable number of experts.
     We implement a time series generator with specified properties and an aggregating forecasting model. 
-    We conduct a series of experiments with various hyperparameters of the algorithm (including initialization weights, mixing scheme, train window). 
+    We conduct a series of experiments with various hyperparameters of the algorithm (including initialization weights, mixing update coefficients, etc.), and propose a new mixing scheme, used in the algorithm.
     The experiments confirm that these hyperparameters have a significant influence on the algorithm's performance.           
         
 %   \noindent
@@ -154,34 +154,39 @@ This change allows for a more accurate modeling of real-life conditions, where t
 %\noindent
 The corresponding algorithm is called Fixed Share \cite{article98}. 
 A further proposed generalization of it is the Mixing Past Posteriors (MPP) method \cite{article02}. 
-The cumulative losses of the aggregating algorithm are related to convex combinations of expert losses. 
-The concept of regret also changes. 
-Now the algorithm's cumulative losses are compared to the cumulative losses of convex combinations of expert strategies.
-
+%The cumulative losses of the aggregating algorithm are related to convex combinations of expert losses. 
+%The concept of regret also changes. 
+%Now the algorithm's cumulative losses are compared to the cumulative losses of convex combinations of expert strategies.
 A characteristic feature of the problem considered in \cite{article} is the absence of a predefined set of competing expert strategies, as was the case in the works cited above.
 Instead, new expert strategies are constructed at each step of the online learning process.
 The master must aggregate the forecasts of all expert strategies constructed up to that time in real-time at each step. 
 Algorithm GMPP, proposed in \cite{article}, is the foundation of our experiments. 
+
+In our work, we systematically explore the impact of various hyperparameters on the algorithm, including different weight functions for initializing experts, 
+various mixing schemes for combining expert predictions, and different update coefficient functions. 
+We also analyze algorithm performance in situations of lack of information,  experimenting with different sizes of the expert training window and noise level in the data. 
+We propose a new mixing scheme called <<Increasing Past Share>> that emphasizes older expert predictions, 
+doing so more smoothly than the default scheme in the GMPP algorithm, which helps to incorporate more historical information.
 
 \section{Problem statement}
 %\paragraph{Definitions}
 Let $x_1, x_2, \dots$ be the sequence of signals belonging to the sample space  $\mathcal{X}$. 
 The masters goal is to predict the sequence of the corresponding responces $y_1, y_2, \dots$ belonging to the outcome space $\mathcal{Y}$. 
 We assume that the master knows $a, b \in \RR$ --- the bounds of the responces sequence, s.t. $\forall i\quad a \leq y_i \leq b$.
+There is a countable number of experts $i \in \mathcal{N}$, where $\mathcal{N}$ is the natural numbers set. 
+%We assume that there is a countable number of experts $i \in \mathcal{N}$, where $\mathcal{N}$ is the natural numbers set. 
+%The predictions of the master and experts also belong to $\mathcal{Y}$. 
+Let $ \lambda: \mathcal{Y} \times \mathcal{Y} \rightarrow \RR_+$ be the nonnegative loss function. 
 
-We assume that there is an countable number of experts $i \in \mathcal{N}$, where $\mathcal{N}$ is the natural numbers set. 
-The predictions of the master and experts belong to the decision space $\mathcal{D}$. 
-Let $ \lambda: \mathcal{D} \times \mathcal{Y} \rightarrow \RR_+$ be the nonnegative loss function. 
-
-At each step $t$ every expert $i \in \mathcal{N}$ provides his prediction $f_t^i = f_t^i(x_t)  \in \mathcal{D}$. 
-After obtaining them the master gives his prediction $p_t = p_t(x_t) \in \mathcal{D}$. 
+At each step $t$ every expert $i \in \mathcal{N}$ provides his prediction $f_t^i = f_t^i(x_t)  \in \mathcal{Y}$. 
+After obtaining them the master gives his prediction $p_t = p_t(x_t) \in \mathcal{Y}$. 
 Next, the generator reveals the true outcome $y_t$, and the losses are computed.
 Let $h_t = \lambda(p_t, y_t)$ be the master's loss , and $l_t^i = \lambda(f_t^i, y_t)$ be the loss of expert $i \le t$. For $i > t$ (i.e. expert $i$ is not yet initialized), $l_t^i = h_t$.
 
 With designations $L_T^i = \sum_{t = 1}^T l_t^i$, representing the cumulative loss of expert $i$ during the first T steps, and $H_T = \sum_{t = 1}^T h_t$, 
 representing the master's cumulative loss during the first T steps, we can define the master's regret relative to the expert $i$ as $R^i_T = H_T - L^i_T$. 
 
-The best partition is formed based on a hindsight analysis of the experiment results, assuming we know the segment boundaries. For each segment, the best partition predictions are set equal to the predictions of the best local expert (the one that has the lowest cumulative sum on that segment). Master's regret relative to the best partition is defined as $R_T= H_T - L_T$, where $L_T$ is the cumulative loss of the best partition. We use this $R_T$ as a metric in our experiments.
+The best partition is formed based on a hindsight analysis of the experiment results, assuming we know the segment boundaries. For each segment, the best partition predictions are set equal to the predictions of the best local expert (the one that has the lowest cumulative sum on that segment). Master's regret relative to the best partition is defined as $R_T= H_T - L_T$, where $L_T$ is the cumulative loss of the best partition. We use $R_T$ as a metric in our experiments.
 
  
 %\paragraph{Aggregating algorithm}
@@ -224,21 +229,23 @@ The best partition is formed based on a hindsight analysis of the experiment res
 \section{Experiment}
 We implement the synthetic time series generator and the GMPP algorithm itself. 
 We then conduct experiments to analyze the effects of varying hyperparameters.
+As can be seen from the algorithm, the time computational complexity of the algothim is quadratic. 
+Therefore , we fix certain length of time series for all experiments.
 \subsection{Data generation}
 
 We define generators $G_1, G_2, \dots, G_k$ by their weight vectors $\vec w_1, \vec w_2, \dots, \vec w_k \in \RR^d$. 
 Here, $d$ represents the dimensionality of the signals.
 
 We generate signals as a series of vectors $\vec x_1, \vec x_2, \dots, \vec x_T \sim \mathcal{N}(0, I_d)$, indicating they are drawn from a zero-mean Gaussian distribution with an identity covariance matrix .
+%We randomly divide this sequence of vectors into a series of segments.
+%%This series of vectors is then randomly divided into a sequence of segments. 
+%We denote these segments as $S_1, S_2, \dots, S_m$. 
+%Each segment $S_i$ is a sequence of vectors itself, containing elements from $\vec x_{s_{i-1}+1}$ to $\vec x_{s_i}$ (where $s_i$ is the index of the last element in segment $i$, $s_0 = 0$). 
+We randomly divide this sequence of vectors into a series of segments $\{S_1, S_2, \dots, S_m\}$ = $\{\{ \vec x_1, \vec x_2, \dots, \vec x_{|S_1|}\}, \{\vec x_{|S_1|+1}, \vec x_{|S_1|+2}, \dots, \vec x_{|S_1| + |S_2|}\}, \dots, \{\vec x_{T-|S_m|+1}, \vec x_{T-|S_m|+2}, \dots, \vec x_{T}\}\}$. 
+Importantly, each segment $S_i$ corresponds to a specific generator $G_{g(i)}$ according to a random function $g$. 
+This function determines which generator is responsible for creating responses for that segment. In our experiment, $g(i)$ is uniformly distributed in $\{1, 2, \dots, k\} \backslash \{g(i-1)\}$, so adjacent segments correspond to different generators.
 
-We randomly divide this sequence of vectors into a series of segments.
-%This series of vectors is then randomly divided into a sequence of segments. 
-We denote these segments as $S_1, S_2, \dots, S_m$. 
-Each segment $S_i$ is a sequence of vectors itself, containing elements from $\vec x_{s_{i-1}+1}$ to $\vec x_{s_i}$ (where $s_i$ is the index of the last element in segment $i$, $s_0 = 0$). 
-Importantly, each segment $S_i$ is assigned to a specific generator $G_{g(i)}$ according to a random function $g$. 
-This function determines which generator is responsible for creating responses for that segment. In our experiment, $g(i)$ is uniformly distributed in $\{1, 2, \dots, k\} \backslash \{g(i-1)\}$, so adjacent segments correspond to different generators 
-
-Ultimately, we obtain the series of responses $y_1, y_2, \dots, y_T$ by taking the dot product of each signal vector with the weight vector of the corresponding  generator and adding the noise: $y_i = \langle \vec w_{g(i)}, \vec x_i \rangle + \varepsilon_i,$ where $\varepsilon_i \sim \mathcal{N}(0, \sigma^2)$. If $y_i  \notin [a, b]$, we regenerate $x_i$ until this condition is met.
+Ultimately, we obtain the series of responses $y_1, y_2, \dots, y_T$ by taking the dot product of each signal vector with the weight vector of the corresponding  generator and adding the noise: $y_i = \langle \vec w_{g(i)}, \vec x_i \rangle + \varepsilon_i,$ where $\varepsilon_i \sim \mathcal{N}(0, \sigma^2)$. If $y_i  \notin [a, b]$, we regenerate $x_i$ until this condition is met. For our properties, bootstrap shows this happens less than in $4\%$ of the cases, so can be considered insignificant.
 \vspace{2mm}
 
 In our experiment, we fix the following data characteristics:
@@ -247,7 +254,7 @@ In our experiment, we fix the following data characteristics:
 \item Signals dimention $d=10$,
 \item Generator weight vectors are drawn from a uniform distribution $U_{[-10, 10]^d}$,
 \item Responses bounds $[a, b] = [-40, 40]$,
-\item Segments sizes are drawn from a uniform distribution $U_{[50, 300]}$,
+\item $|S_1|, |S_2|, |S_{m-1}|$ are drawn from a uniform distribution $U_{[50, 300]}$, and $|S_m| = T-\sum_{i=1}^{m-1}|S_i|$
 \item Number of generators $k = 5$,
 \item White noise variance $\sigma^2= 1$
 \end{itemize}
@@ -274,7 +281,7 @@ We investigate the impact of various hyperparameters on the GMPP algorithm's per
 \item Default: $w_1^t = \frac{1}{(t+1)\ln^2(t+1)}$
 \item Experimental: 
 \begin{itemize}
-\item $w_1^t = \frac{1}{e^t}$, exploring exponential decay as a common alternative.
+%\item $w_1^t = \frac{1}{e^t}$, exploring exponential decay as a common alternative.
 \item $w_1^t = \frac{1}{(t+4)\ln(t+4)\ln^2\ln(t+4)}$, representing a slower decaying function.
 \item $w_1^t = \frac{1}{t^\alpha}$, with $\alpha \in (1, 2]$, to analyze the impact of faster decay rates.
 \item $w_1^t = \frac{1}{t^\alpha}$, with $\alpha \in (0, 1]$, to analyze the behavior with diverging weights.
@@ -350,55 +357,67 @@ We also propose a new mixing scheme:
 \item Window Size ($l$): We vary train window size $l \in \{5, 10, 20, 50, 100\}$ to check algorithm performance in situations when experts lack information or when they often train on pieces made by different generators.
 
 \end{enumerate}
-
-As a metric of quality we use $R_T$ --- master's regret relative to the best partition.
-We run experiments 4 times for each configuration of hyperparameters, and take the mean of the earned regrets.
-
-\newpage
+%
+%As a metric of quality we use $R_T$ --- master's regret relative to the best partition.
+%We run experiments 4 times for each configuration of hyperparameters, and take the mean of the earned regrets.
+%
+%\newpage
 \section{Results}
 
 We analyze the impact of various hyperparameters on the GMPP algorithm's performance, focusing on initialization weights, mixing schemes, mixing update coefficients, and expert window size. Our primary performance metric is the mean regret relative to the best partition, calculated from four independent runs for each hyperparameter configuration.
 
+\subsection{Impact of Initialization Weights}
+Table \ref{table:mt_wf} explores the influence of different ways of initializing the weights of experts (the importance assigned to each expert at the start of the algorithm) on the regret. We highlight the lowest regret values in bold.
 
 
+The results show that the best weight function can depend on the mixing scheme chosen. For example, in default scheme <<Start Vector Share>> weight functions based on diverging series yielded lower regret than those based on converging series. In this case, the $1/x^{0.5}$ weight function achieved the best performance (see Figure \ref{fig:diff_wf}). When employing converging weight series, schemes <<Increasing Past Share>> and <<Uniform Past Share>> appear to be better than others.
+
+
+
+\begin{figure}[H]
+\centering % <-- added
+\includegraphics[width=1\linewidth]{diff_wf_styled}
+\caption{\begin{varwidth}[t]{\linewidth}\centering Total loss for different weight functions \\(alpha function is defaut, $\sigma^2 =1$, window size = 10)\end{varwidth} \label{fig:diff_wf}}
+
+\end{figure}
+
+
+\begin{table}[H]
+\centering
+%\caption{Regret with different weight functions and mixing types}
+\begin{tabular}{c|cccc}
+\toprule
+ & \multicolumn{4}{c}{Mixing Type} \\
+\midrule
+Weight Function & Decaying Past & Increasing Past & Start & Uniform Past \\
+\midrule
+$1 / ((x + 1)\ln^2(x + 1))$ & 122513.26 & 122383.91 & 175594.64 & 117175.93 \\
+$1 / c$ & 128114.78 & 117241.85 & 113998.26 & 119703.68 \\
+$1 / (x^{0.1})$ & 127435.12 & 115101.52 & 111276.08 & 117830.57 \\
+$1 / (x^{0.3})$ & 126769.51 & 112900.36 & \contour{black}{108946.40} & 115819.07 \\
+$1 / (x^{0.5})$ & 126191.99 & 111221.38 & \contour{black}{108630.68} & 114153.63 \\
+$1 / (x^{0.7})$ & 125352.96 & \contour{black}{109775.49} & 112027.20 & 112378.87 \\
+$1 / (x^{0.9})$ & 123969.39 & \contour{black}{109408.73} & 122832.21 & \contour{black}{110783.66} \\
+$1 / x$ & 122965.58 & \contour{black}{110376.37} & 131907.11 & \contour{black}{110486.71} \\
+$1 / (x^{1.01})$ & 123066.72 & \contour{black}{110438.09} & 132268.30 & \contour{black}{110569.83} \\
+$1 / (x^{1.1})$ & 123963.12 & \contour{black}{111050.44} & 135253.09 & 111366.88 \\
+$1 / (x^{1.2})$ & 124846.17 & 111873.03 & 137976.99 & 112298.14 \\
+$1 / (x^2)$ & 133051.62 & 124473.63 & 148080.01 & 123449.14 \\
+$1 / ((x + 4) \ln(x + 4)\ln^2(\ln(x + 4)))$ & 121229.77 & 119413.95 & 169065.24 & 114823.76 \\
+
+\bottomrule
+\end{tabular}
+\caption{\begin{varwidth}[t]{\linewidth}\centering Regret with different weight functions and mixing types  
+\\(alpha function is defaut, $\sigma^2 =1$, window size = 10)\end{varwidth} \label{table:mt_wf}}
+
+\end{table}
+
+%--------------------------------------------------------------------------------------------------------------------
 
 \subsection{Influence of Training Window Size}
 
-%\begin{figure}[htb]
-%    \centering % <-- added
-%\begin{subfigure}{0.5\textwidth}
-%  \includegraphics[width=\linewidth]{diff_tw_s}
-%  \caption{Start Vector Share}
-%  \label{fig:tw_s}
-%\end{subfigure}\hfil % <-- added
-%\begin{subfigure}{0.5\textwidth}
-%  \includegraphics[width=\linewidth]{diff_tw_i}
-%  \caption{Increasing Past Share}
-%  \label{fig:tw_i}
-%\end{subfigure}\hfil % <-- added
-%
-%
-%\medskip
-%\begin{subfigure}{0.5\textwidth}
-%  \includegraphics[width=\linewidth]{diff_tw_u}
-%  \caption{Uniform Past Share}
-%  \label{fig:tw_u}
-%\end{subfigure}\hfil % <-- added
-%\begin{subfigure}{0.5\textwidth}
-%  \includegraphics[width=\linewidth]{diff_tw_d}
-%  \caption{Decaying Past Share}
-%  \label{fig:tw_d}
-%\end{subfigure}\hfil % <-- added
-
-%\caption{\begin{varwidth}[t]{\linewidth}\centering Total losses with different sizes of train window  \\ (alpha function is defaut, weight function is $1/x^{1.01}$, $\sigma^2 =1$)\end{varwidth}}
-%
-%\label{fig:imag}
-%\end{figure}
-
-
-\begin{table}[h]
+\begin{table}[H]
 \centering
-
 
 \begin{tabular}{c|ccccc}
 \toprule
@@ -407,60 +426,30 @@ We analyze the impact of various hyperparameters on the GMPP algorithm's perform
 {Train Window} & decaying past & increasing past & start & uniform past & \\
 \midrule
 5 & 140895.88 & 155163.20 & 186550.57 & 150308.76 \\
-10 & 123066.72 & 110438.09 & 132268.30 & 110569.83 \\
+10 & 123066.72 & \contour{black}{110438.09} & 132268.30 & \contour{black}{110569.83} \\
 20 & 163303.00 & 121289.12 & 125763.68 & 127764.22 \\
 50 & 187007.96 & 132165.07 & 136397.74 & 139560.71 \\
 100 & 195888.54 & 143925.39 & 148888.73 & 150253.75 \\
 \bottomrule
 \end{tabular}
-\caption{\begin{varwidth}[t]{\linewidth}\centering Regret with different Mixing Update schemes and Train Windows  \\ (alpha function is defaut, weight function is $1/x^{1.01}$, $\sigma^2 =1$)\end{varwidth}}
+\caption{\begin{varwidth}[t]{\linewidth}\centering Regret with different Mixing Update schemes and Train Windows  \\ (alpha function is defaut, weight function is $1/x^{1.01}$, $\sigma^2 =1$)\end{varwidth} \label{table:tw}}
 
 \end{table}
 
+Table \ref{table:tw}  shows that the performance of the GMPP algorithm is generally sensitive to the training window size.
+The best performance is achieved with a window size of 10, suggesting that a balance between having enough past data to train a good model and not being too influenced by older, potentially irrelevant data is important.
+The different mixing schemes show varying performance, with the default GMPP scheme <<Start Vector Share>> (which emphasizes initial and recent weights) showing higher regret compared to the other schemes. Best performance in the conditions of enough informatin (with train window $\geq 10$) shows <<Increasing Past Share>> scheme.
+
+%--------------------------------------------------------------------------------------------------------------------
+
 \subsection{Influence of Noise}
-%\begin{figure}[htb]
-%    \centering % <-- added
-%\begin{subfigure}{0.33\textwidth}
-%  \includegraphics[width=\linewidth]{noise_0.1}
-%  \caption{$\sigma^2$ = 0.1}
-%  \label{fig:n_1}
-%\end{subfigure}\hfil % <-- added
-%\begin{subfigure}{0.33\textwidth}
-%  \includegraphics[width=\linewidth]{noise_2}
-%  \caption{$\sigma^2$ = 2}
-%  \label{fig:n_2}
-%\end{subfigure}\hfil % <-- added
-%\begin{subfigure}{0.33\textwidth}
-%  \includegraphics[width=\linewidth]{noise_5}
-%  \caption{$\sigma^2$ = 5}
-%  \label{fig:n_5}
-%\end{subfigure}
-%
-%\medskip
-%\begin{subfigure}{0.33\textwidth}
-%  \includegraphics[width=\linewidth]{noise_10}
-%  \caption{$\sigma^2$ = 10}
-%  \label{fig:n_10}
-%\end{subfigure}\hfil % <-- added
-%\begin{subfigure}{0.33\textwidth}
-%  \includegraphics[width=\linewidth]{noise_15}
-%  \caption{$\sigma^2$ = 15}
-%  \label{fig:n_15}
-%\end{subfigure}\hfil % <-- added
-%\begin{subfigure}{0.33\textwidth}
-%  \includegraphics[width=\linewidth]{noise_20}
-%  \caption{$\sigma^2$ = 20}
-%  \label{fig:n_20}
-%\end{subfigure}
-%
-%\caption{\begin{varwidth}[t]{\linewidth}\centering Total losses with different noise variance $\sigma^2$  \\ (alpha function is defaut, weight function is default, window size = 10)\end{varwidth}}
-%
-%\label{fig:noises}
-%\end{figure}
+Table \ref{table:noise} investigates how the noise in the generated responses affects the regret of the algorithm.  
+Surprisingly, as the noise level increases, the regret decreases, and at some point, it even becomes negative (see Figure \ref{fig:noises}). 
+The reason of this is that with size of the window equal only to 10, high noise can dramatically deteriorate training of the linear regression, leading to huge mistakes of the experts. As a resut, the master algorithm outperforms the best partition.
+% Interestingly, the point at which the regret becomes negative varies depending on the mixing scheme.
+
 \begin{table}[H]
 \centering
-
-\label{tab:alpha}
 
 \begin{tabular}{c|ccccc}
 \toprule
@@ -482,106 +471,67 @@ We analyze the impact of various hyperparameters on the GMPP algorithm's perform
 12 & -828973.51 & -1123130.94 & -420588.94 & -1354731.42 \\
 %13 & -1297340.06 & -1127803.13 & -184977.56 & -1365609.14 \\
 %14 & -1529645.72 & -1265872.25 & -213233.53 & -1633244.28 \\
-15 & -1376777.17 & -1508510.73 & -1205600.59 & -1862352.43 \\
-20 & -8506756.45 & -9004436.41 & -8784588.25 & -9007978.86 \\
-50 & -12031878.44 & -14242897.85 & -4704221.50 & -14879230.26 \\
+%15 & -1376777.17 & -1508510.73 & -1205600.59 & -1862352.43 \\
+%20 & -8506756.45 & -9004436.41 & -8784588.25 & -9007978.86 \\
+%50 & -12031878.44 & -14242897.85 & -4704221.50 & -14879230.26 \\
 \bottomrule
 \end{tabular}
-\caption{\begin{varwidth}[t]{\linewidth}\centering Regret with different Mixing Update schemes and Noise Variance \\ (alpha function is defaut, weight function is $1/x^{1.01}$, window size = 10)\end{varwidth}}
+\caption{\begin{varwidth}[t]{\linewidth}\centering Regret with different Mixing Update schemes and Noise Variance \\ (mixing scheme is default, alpha function is defaut, weight function is $1/x^{1.01}$, window size = 10)\end{varwidth} \label{table:noise}} 
 \end{table}
 
 
-\newpage
+
+%\newpage
 
 \begin{figure}[htb]
     \centering % <-- added
 \begin{subfigure}{0.49\textwidth}
-  \includegraphics[width=\linewidth]{noise_0.1}
+  \includegraphics[width=\linewidth]{dec_noise_0.1}
   \caption{$\sigma^2$ = 0.1}
   \label{fig:n_1}
 \end{subfigure}\hfil % <-- added
 \begin{subfigure}{0.49\textwidth}
-  \includegraphics[width=\linewidth]{noise_2}
+  \includegraphics[width=\linewidth]{dec_noise_2}
   \caption{$\sigma^2$ = 2}
   \label{fig:n_2}
 \end{subfigure}\hfil % <-- added
 
 %\medskip
 \begin{subfigure}{0.49\textwidth}
-  \includegraphics[width=\linewidth]{noise_5}
+  \includegraphics[width=\linewidth]{dec_noise_5}
   \caption{$\sigma^2$ = 5}
   \label{fig:n_5}
 \end{subfigure}
 \begin{subfigure}{0.49\textwidth}
-  \includegraphics[width=\linewidth]{noise_10}
-  \caption{$\sigma^2$ = 10}
-  \label{fig:n_10}
+  \includegraphics[width=\linewidth]{dec_noise_8}
+  \caption{$\sigma^2$ = 8}
+  \label{fig:n_8}
 \end{subfigure}\hfil % <-- added
 
 %\medskip
 \begin{subfigure}{0.5\textwidth}
-  \includegraphics[width=\linewidth]{noise_15}
-  \caption{$\sigma^2$ = 15}
-  \label{fig:n_15}
+  \includegraphics[width=\linewidth]{dec_noise_10}
+  \caption{$\sigma^2$ = 10}
+  \label{fig:n_10}
 \end{subfigure}\hfil % <-- added
 \begin{subfigure}{0.49\textwidth}
-  \includegraphics[width=\linewidth]{noise_20}
-  \caption{$\sigma^2$ = 20}
-  \label{fig:n_20}
+  \includegraphics[width=\linewidth]{dec_noise_12}
+  \caption{$\sigma^2$ = 12}
+  \label{fig:n_12}
 \end{subfigure}
 
-\caption{\begin{varwidth}[t]{\linewidth}\centering Total losses with different noise variance $\sigma^2$  \\ (alpha function is defaut, weight function is default, window size = 10)\end{varwidth}}
-\label{fig:noises}
+\caption{\begin{varwidth}[t]{\linewidth}\centering Total losses with different noise variance $\sigma^2$  (mixing scheme is <<decaying past>>, \\ alpha function is defaut, weight function is $1/x^{1.01}$, window size = 10, random seed = 103)\end{varwidth} \label{fig:noises}}
 \end{figure}
-
-
 
 \newpage
-\subsection{Impact of Initialization Weights}
 
-\begin{figure}[htb]
-\centering % <-- added
-\includegraphics[width=0.9\linewidth]{diff_wf}
-\caption{\begin{varwidth}[t]{\linewidth}\centering Total loss for different weight functions \\(alpha function is defaut, $\sigma^2 =1$, window size = 10)\end{varwidth}}
-
-\end{figure}
-
-
-\begin{table}[H]
-\centering
-%\caption{Regret with different weight functions and mixing types}
-\label{tab:mean_values_b}
-
-\begin{tabular}{c|cccc}
-\toprule
- & \multicolumn{4}{c}{Mixing Type} \\
-\midrule
-Weight Function & Decaying Past & Increasing Past & Start & Uniform Past \\
-\midrule
-$1 / ((x + 1)\ln^2(x + 1))$ & 122513.26 & 122383.91 & 175594.64 & 117175.93 \\
-$1 / c$ & 128114.78 & 117241.85 & 113998.26 & 119703.68 \\
-$1 / (x^{0.1})$ & 127435.12 & 115101.52 & 111276.08 & 117830.57 \\
-$1 / (x^{0.3})$ & 126769.51 & 112900.36 & \contour{black}{108946.40} & 115819.07 \\
-$1 / (x^{0.5})$ & 126191.99 & 111221.38 & \contour{black}{108630.68} & 114153.63 \\
-$1 / (x^{0.7})$ & 125352.96 & \contour{black}{109775.49} & 112027.20 & 112378.87 \\
-$1 / (x^{0.9})$ & 123969.39 & \contour{black}{109408.73} & 122832.21 & \contour{black}{110783.66} \\
-%$1 / x$ & 122965.58 & \contour{black}{110376.37} & 131907.11 & \contour{black}{110486.71} \\
-$1 / (x^{1.01})$ & 123066.72 & \contour{black}{110438.09} & 132268.30 & \contour{black}{110569.83} \\
-$1 / (x^{1.1})$ & 123963.12 & \contour{black}{111050.44} & 135253.09 & 111366.88 \\
-$1 / (x^{1.2})$ & 124846.17 & 111873.03 & 137976.99 & 112298.14 \\
-$1 / (x^2)$ & 133051.62 & 124473.63 & 148080.01 & 123449.14 \\
-$1 / ((x + 4) \ln(x + 4)\ln^2(\ln(x + 4)))$ & 121229.77 & 119413.95 & 169065.24 & 114823.76 \\
-
-\bottomrule
-\end{tabular}
-\caption{\begin{varwidth}[t]{\linewidth}\centering Regret with different weight functions and mixing types  \\(alpha function is defaut, $\sigma^2 =1$, window size = 10)\end{varwidth}}
-
-\end{table}
-
-
+%--------------------------------------------------------------------------------------------------------------------
 
 \subsection{Impact of Mixing Update Coefficients}
 
+Table \ref{table:diff_af} examines the effect of different coefficients used in the Start Vector Share Mixing Update on the regret. 
+The update coefficient controls how much the past weights distribution among experts influences the new distribution versus the current distribution. The table once again confirms that the weights initialization function $1/x^{0.5}$ is the best among others, and shows that with this function, 
+the default mixing update coefficient $\alpha_t = 1 / (t + 1)$ stands out as a strong performer, with no serious competitors among other update coefficient functions. 
 
 \begin{table}[H]
 \centering
@@ -612,11 +562,17 @@ $1 / 10000$ & 136414.42 & 119357.81 & 120634.74 & 127510.93 \\
 $1 / 50000$ & 130783.65 & 125141.06 & 129963.25 & 131542.49 \\
 \bottomrule
 \end{tabular}
-\caption{\begin{varwidth}[t]{\linewidth}\centering Regret with different Alpha and Weight Functions in Start Vector Share Update scheme  \\($\sigma^2 =1$, window size = 10)\end{varwidth}}
+\caption{\begin{varwidth}[t]{\linewidth}\centering Regret with different Alpha and Weight Functions in Start Vector Share Update scheme  \\($\sigma^2 =1$, window size = 10)\end{varwidth} \label{table:diff_af}}
 \end{table}
 
+%--------------------------------------------------------------------------------------------------------------------
 
 \subsection{Gamma parameter in Increasing Past Share Mixing Update}
+
+Table \ref{table:gamma} specifically examines the impact of the $\gamma$ parameter in the <<Increasing Past Share>> mixing scheme. $\gamma$ controls how quickly the weight given to past expert predictions increases. 
+The table shows that the impact of the gamma parameter varies depending on the weight function. 
+Interestingly, overall the  difference across $\gamma$ is relatively small.
+
 \begin{table}[h]
 \centering
 \captionsetup{justification=centering}
@@ -639,26 +595,18 @@ $2$& 126865.67 & \contour{black}{110089.54} & 116216.44 & 111563.64 \\
 $4$ & 133447.69 & \contour{black}{109160.56} & 115299.68 & 113922.30 \\
 \bottomrule
 \end{tabular}
-\caption{\begin{varwidth}[t]{\linewidth}\centering Regret with different $\gamma$ in Increasing Past Share Mixing Update scheme  \\(alpha function is defaut, $\sigma^2 =1$, window size = 10)\end{varwidth}}
+\caption{\begin{varwidth}[t]{\linewidth}\centering Regret with different $\gamma$ in Increasing Past Share Mixing Update scheme  \\(alpha function is defaut, $\sigma^2 =1$, window size = 10)\end{varwidth} \label{table:gamma}}
 \end{table}
 
 
-\newpage
-
-\begin{figure}[htb]
-\centering % <-- added
-\includegraphics[width=1\linewidth]{diff_mt}
-\caption{\begin{varwidth}[t]{\linewidth}\centering Total loss with different mixing schemes  \\ (alpha function is defaut, weight function is $1/x^{1.01}$, $\sigma^2 =1$, window size = 10)\end{varwidth}}
-%\caption{Total loss for different mixing schemes}
-\medskip
-\end{figure}
-
-
 %\newpage
+%--------------------------------------------------------------------------------------------------------------------
+
+\subsection{Impact of Mixing Scheme}
+%
 
 \begin{table}[H]
 \centering
-\label{tab:mean_values}
 
 \begin{tabular}{c|ccc|ccc}
 \toprule
@@ -689,53 +637,32 @@ $1 / 10000$ & 119358 & 120635 & 127511 & 121016 & 125808 & 128881 \\
 $1 / 50000$ & 125141 & 129963 & 131542 & 130965 & 131895 & 131885 \\
 \bottomrule
 \end{tabular}
-\caption{\begin{varwidth}[t]{\linewidth}\centering Mean values with different Mixing Update schemes and Weight and Alpha functions  \\($\sigma^2 =1$, window size = 10)\end{varwidth}}
+\caption{\begin{varwidth}[t]{\linewidth}\centering Mean values with different Mixing Update schemes and Weight and Alpha functions  \\($\sigma^2 =1$, window size = 10)\end{varwidth} \label{table:mt} }
 \end{table}
 
-
-%\begin{sidewaystable}
-%\centering
-%\caption{\begin{varwidth}[t]{\linewidth}\centering Mean values with different Mixing Update schemes and Weight and Alpha functions  \\($\sigma^2 =1$, window size = 10)\end{varwidth}}
-%\label{tab:mean_values}
-%
-%\begin{tabular}{c|ccc|ccc|ccc|ccc}
-%\toprule
-%Mixing scheme & \multicolumn{3}{c|}{start} & \multicolumn{3}{c|}{increasing past} & \multicolumn{3}{c|}{uniform past} & \multicolumn{3}{c}{decaying past} \\
-%\midrule
-%\backslashbox{$\alpha_t$}{$w_1^x$} &
-%$\dfrac{1}{x^{1.1}}$ &
-%$\dfrac{1}{x^{0.5}}$ &
-%$\dfrac{1}{c}$ &
-%$\dfrac{1}{x^{1.1}}$ &
-%$\dfrac{1}{x^{0.5}}$ & 
-%$\dfrac{1}{c}$ &
-%$\dfrac{1}{x^{1.1}}$ &
-%$\dfrac{1}{x^{0.5}}$ &
-%$\dfrac{1}{c}$ &
-%$\dfrac{1}{x^{1.1}}$ &
-%$\dfrac{1}{x^{0.5}}$ &
-%$\dfrac{1}{c}$ \\
-%\midrule
-%$1 / (t + 1)$ & 132268 &  \contour{black}{108631} & 113998 & \contour{black}{110438} & 111221 & 117242 & \contour{black}{110570} & 114154 & 119704 & 123067 & 126192 & 128115 \\
-%$1 / (t + 1)^{0.5}$ & 207099 & 164079 & 141554 & 183749 & 160168 & 145260 & 175611 & 157818 & 146286 & 136055 & 132880 & 131509 \\
-%$1 / (t + 1)^{1.5}$ & 125700 & 130186 & 131330 & 131002 & 131850 & 131691 & 132418 & 132463 & 131940 & 134773 & 133653 & 132551 \\
-%$1 / (t + 1)^2$ & 134930 & 133876 & 132709 & 135243 & 133936 & 132722 & 135301 & 133958 & 132731 & 135387 & 134000 & 132753 \\
-%$1 / \ln(t + 1)$ & 418163 & 340332 & 309672 & 400131 & 337777 & 312109 & 390906 & 333528 & 309570 & 283210 & 252793 & 236402 \\
-%$1 / e^{t/3}$ & 135409 & 134012 & 132761 & 135409 & 134012 & 132761 & 135409 & 134012 & 132761 & 135409 & 134012 & 132761 \\
-%$1 / (t + 10)$ & 132208 & \contour{black}{108639} & 114051 & \contour{black}{110259 }& 111266 & 117299 & \contour{black}{110521} & 114212 & 119758 & 123137 & 126238 & 128146 \\
-%$1 / (t + 100)$ & 131624 &  \contour{black}{108733} & 114569 &  \contour{black}{109744}& 111719 & 117835 & \contour{black}{110604} & 114760 & 120269 & 123716 & 126653 & 128429 \\
-%$1 / (t + 1000)$ & 127165 & \contour{black}{110389} & 118513 & \contour{black}{110754} & 115362 & 121522 & 113448 & 118679 & 123630 & 127161 & 129057 & 129996 \\
-%$1 / 100$ & 163117 & 129036 & 117522 & 129874 & 125704 & 120981 & 126580 & 125444 & 122194 & 116459 & 119147 & 121009 \\
-%$1 / 500$ & 141386 & 111707 &  \contour{black}{108969} & 112134 & \contour{black}{110618} & 112210 & \contour{black}{110553 }& 111701 & 114377 & 115820 & 120327 & 124078 \\
-%$1 / 1000$ & 135612 &  \contour{black}{109449} & 111710 &  \contour{black}{109844} & \contour{black}{110794} & 115281 &  \contour{black}{109805} & 113087 & 117809 & 120758 & 124500 & 127208 \\
-%$1 / 5000$ & 121906 & 115147 & 123742 & 115334 & 121027 & 125928 & 119177 & 123913 & 127377 & 130666 & 131268 & 131337 \\
-%$1 / 10000$ & 119358 & 120635 & 127511 & 121016 & 125808 & 128881 & 124694 & 127919 & 129766 & 132826 & 132555 & 132022 \\
-%$1 / 50000$ & 125141 & 129963 & 131542 & 130965 & 131895 & 131885 & 132478 & 132531 & 132100 & 134851 & 133705 & 132609 \\
-%\bottomrule
-%\end{tabular}
-%\end{sidewaystable}
+\begin{figure}[H]
+\centering % <-- added
+\includegraphics[width=0.9\linewidth]{diff_mt_styled}
+\caption{\begin{varwidth}[t]{\linewidth}\centering Total loss with different mixing schemes  \\ (alpha function is defaut, weight function is $1/x^{1.01}$, $\sigma^2 =1$, window size = 10)\end{varwidth} \label{fig:mt}}
+%\caption{Total loss for different mixing schemes}
+\medskip
+\end{figure}
 
 
+Table \ref{table:mt} focuses on the performance of the <<Start Vector Share>> and <<Increasing Past Share>> mixing schemes with different weight functions and update coefficients. In general, <<Start Vector>>  scheme shows a preference for the $1/x^{0.5}$ weight function, while <<Increasing Past>> works better with the  $1/x^{1.1}$ weight function.
+Figure \ref{fig:mt} compares cumulative losses of master algorithm with different mixing shemes.
+
+
+
+%--------------------------------------------------------------------------------------------------------------------
+
+\section{Conclusion}
+
+This paper explores the impact of hyperparameters on the GMPP algorithm, an online aggregation method for predicting locally stationary time series using a countable number of experts. The study systematically analyzes the influence of initialization weights, mixing update coefficients, mixing schemes, and expert window size.
+
+Results demonstrate that the optimal choice of hyperparameters depends heavily on the chosen mixing scheme. For instance, the <<Increasing Past Share>> mixing scheme, proposed in this study, shows promising results, particularly when combined with specific weight functions. Interestingly, higher noise levels can lead to lower regret, sometimes even resulting in negative regret, indicating that the algorithm can outperform the best partition in noisy environments.
+
+%In conclusion, this study emphasizes the significant impact of these adjustments on the GMPP algorithm's effectiveness. It highlights the importance of carefully selecting these settings based on the characteristics of the data and the desired performance goals. Further research is encouraged to explore optimal configurations for specific applications.
 
 %
 %\section{Preparing a manuscript}
@@ -761,6 +688,24 @@ $1 / 50000$ & 125141 & 129963 & 131542 & 130965 & 131895 & 131885 \\
 \clearpage
 \begin{thebibliography}{99}
 
+\bibitem{article}
+    \BibAuthor{V.\,V’yugin, V.\,Trunov}. 2023.
+    Prognozirovanie lokal'no statsionarnykh dannykh s ispol'zovaniem predskazanii ekspertnykh strategiy
+    [Prediction of Locally Stationary Data Using Prediction with
+Expert Advice].
+    Available at: \BibUrl{http://www.jip.ru/2023/470-487-2023.pdf}
+    
+\bibitem{article98}
+    \BibAuthor{M.\,Herbster, M.\,Warmuth}. 1998.
+    \BibTitle{Tracking the best expert}.
+    Available at: \BibUrl{https://link.springer.com/content/pdf/10.1023/A:1007424614876.pdf}
+    
+\bibitem{article02}
+    \BibAuthor{O.\,Bousquet, M.\,Warmuth}. 2002.
+    \BibTitle{Tracking a small set of experts by mixing past posteriors}.
+    Available at: \BibUrl{https://www.jmlr.org/papers/volume3/bousquet02b/bousquet02b.pdf}
+
+
 \bibitem{book}
     \BibAuthor{N.\,Cesa-Bianchi, G.\,Lugosi}. 2006.
     \BibTitle{Prediction, Learning, and Games}.
@@ -779,22 +724,6 @@ $1 / 50000$ & 125141 & 129963 & 131542 & 130965 & 131895 & 131885 \\
     [Mathematical Foundations of Machine Learning and Forecasting].
     Available at: \BibUrl{http://iitp.ru/upload/publications/6256/vyugin1.pdf}
 
-\bibitem{article}
-    \BibAuthor{V.\,V’yugin, V.\,Trunov}. 2023.
-    Prognozirovanie lokal'no statsionarnykh dannykh s ispol'zovaniem predskazanii ekspertnykh strategiy
-    [Prediction of Locally Stationary Data Using Prediction with
-Expert Advice].
-    Available at: \BibUrl{http://www.jip.ru/2023/470-487-2023.pdf}
-    
-\bibitem{article98}
-    \BibAuthor{M.\,Herbster, M.\,Warmuth}. 1998.
-    \BibTitle{Tracking the best expert}.
-    Available at: \BibUrl{https://link.springer.com/content/pdf/10.1023/A:1007424614876.pdf}
-    
-\bibitem{article02}
-    \BibAuthor{O.\,Bousquet, M.\,Warmuth}. 2002.
-    \BibTitle{Tracking a small set of experts by mixing past posteriors}.
-    Available at: \BibUrl{https://www.jmlr.org/papers/volume3/bousquet02b/bousquet02b.pdf}
 
             
 \end{thebibliography}
