--- a/code/notebooks/weight_functions_plot.ipynb
+++ b/code/notebooks/weight_functions_plot.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 103,
    "id": "5f8fe436-9de9-46ad-ad87-5e15b65d1533",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
     "draw_several(from_start=False, logs=anls, labels=labels, colors=colors, \n",
     "             best_color=\"limegreen\", best_label=\"Best partition\", \n",
     "             linestyles=[\"dashdot\", \"solid\", \"dashed\", \"dotted\"],\n",
-    "             title=\"\", fig_size=(10, 6), loc='upper left', bbox_to_anchor=(0, 0.9))#, save_path=\"../../figures/diff_wf_styled.eps\")"
+    "             title=f\"\", fig_size=(10, 6), loc='upper left', bbox_to_anchor=(0, 0.9))#, save_path=\"../../figures/diff_wf_styled.eps\")"
    ]
   },
   {
